@@ -10,7 +10,7 @@ SPVM::Net::SSLeay::X509_NAME - X509_NAME Data Structure in OpenSSL
 
 =head1 Description
 
-Net::SSLeay::X509_NAME class in L<SPVM> represents L<X509_NAME|https://docs.openssl.org/3.2/man3/X509_new//> data structure in OpenSSL
+Net::SSLeay::X509_NAME class in L<SPVM> represents L<X509_NAME|https://docs.openssl.org/3.2/man3/X509_new/> data structure in OpenSSL
 
 =head1 Usage
 
@@ -23,6 +23,12 @@ Net::SSLeay::X509_NAME class in L<SPVM> represents L<X509_NAME|https://docs.open
 C<method oneline : string ();>
 
 Calls native L<X509_NAME_oneline|https://docs.openssl.org/1.1.1/man3/X509_NAME_print_ex/#description> functions given $buf with NULL, and returns its return value.
+
+=head2 DESTROY
+
+C<method DESTROY : void ();>
+
+Frees native L<X509_NAME|https://docs.openssl.org/3.2/man3/X509_new/> object by calling native L<X509_free|https://docs.openssl.org/3.2/man3/X509_new> function if C<no_free> flag of the instance is not a true value.
 
 =head1 See Also
 
