@@ -2,6 +2,7 @@
   [New Features]
     * Add Net::SSLeay::X509_NAME class.
     * Add Net::SSLeay::X509_NAME#oneline method.
+    * Add Net::SSLeay::X509_NAME#DESTROY method.
 0.010 2024-11-11
   [New Features]
     * Add Net::SSLeay::BIO#new_file method.
